--- a/wp-content/themes/signers/editor.css
+++ b/wp-content/themes/signers/editor.css
@@ -417,7 +417,7 @@ Blocks Styles
 				width: 100%;
 }
 .editor-styles-wrapper .acf-block-preview .container {
-				max-width: 1215px;
+				max-width: 1980px;
 				margin: 0 auto;
 				padding: 0 30px;
 				width: 100%;
@@ -448,6 +448,23 @@ Blocks Styles
 				left: 0;
 				width: 100%;
 				height: 100%;
+}
+.editor-styles-wrapper .acf-block-preview .btn-whatsapp {
+				position: fixed;
+				bottom: 30px;
+				right: 30px;
+				height: 50px;
+				width: 50px;
+				border-radius: 50%;
+				background: #25d366;
+				text-align: center;
+				display: inline-block;
+				line-height: 50px;
+				color: #fff;
+				font-size: 30px;
+				-webkit-box-shadow: #333 0 0 10px;
+				        box-shadow: #333 0 0 10px;
+				z-index: 1000;
 }
 .editor-styles-wrapper .acf-block-preview .header .site-menu {
 				position: absolute;
@@ -1641,13 +1658,7 @@ Blocks Styles
 				}
 }
 .editor-styles-wrapper .acf-block-preview .hero--home {
-				padding-top: 167px;
 				position: relative;
-}
-@media only screen and (max-width: 768px) {
-				.editor-styles-wrapper .acf-block-preview .hero--home {
-								padding-top: 155px;
-				}
 }
 .editor-styles-wrapper .acf-block-preview .hero--home .content {
 				display: -webkit-box;
@@ -2138,14 +2149,6 @@ Blocks Styles
 				        align-items: center;
 				background-color: #34375A;
 				padding: 22px 0 19px 0;
-}
-.editor-styles-wrapper .acf-block-preview .site-footer .footer-logo span {
-				color: #ffffff;
-				font-size: 14px;
-				letter-spacing: 0.07px;
-				line-height: 1.42;
-				font-weight: 400;
-				padding-right: 5px;
 }
 .editor-styles-wrapper .acf-block-preview .site-footer .footer-logo .logo-br {
 				max-width: 120px;
