--- a/wp-content/themes/gtoken/scss/components/_menu.scss
+++ b/wp-content/themes/gtoken/scss/components/_menu.scss
@@ -30,8 +30,8 @@
 		}
 
 		&__first-level {
-			color: $primary-color;
-			font-size: 18px;
+			color: $white;
+			font-size: 20px;
 			text-decoration: none;
 			padding-bottom: 10px;
 			@include tre(.5s);
@@ -72,7 +72,7 @@
 
 		.home & {
 			&__first-level {
-				color: $primary-color;
+				color: $white;
 				cursor: pointer;
 				font-family: $secondary-font;
 			}
