--- a/wp-content/themes/gtoken/scss/hero/_home.scss
+++ b/wp-content/themes/gtoken/scss/hero/_home.scss
@@ -1,93 +1,67 @@
 .hero--home {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    aspect-ratio: 16/9;
 
-    .content {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        gap: 80px;
+    .hero {
 
-        @include responsive('desktop-m') {
-            gap: 10px;
-        }
+        &__image,
+        &__video {
+            max-width: 100%;
+            width: 100%;
 
-        @include responsive('desktop-s') {
-            flex-direction: column;
-            gap: 54px;
-        }
-
-        .hero {
-            &__image {
-                position: relative;
-                max-width: 506px;
-                width: 100%;
-                aspect-ratio: 508/500;
-                margin-top: -32px;
-                flex: 1;
-
-                @include responsive('desktop-s') {
-                    margin-top: 0;
-                    align-self: center;
-                }
-
-                @include responsive('mobile-h') {
-                    max-width: 100%;
-                }
-
-                .image-background {
-                    width: calc(100% - 2px);
-                    height: calc(100% - 2px);
-                    top: 1px;
-                    left: 1px;
-                }
-
-                &:before {
-                    @include absolute();
-                    content: '';
-                    background: url(images/icons/hero-form.svg) center/contain no-repeat;
-                    z-index: 2;
-                }
+            @include responsive('desktop-s') {
+                margin-top: 0;
+                align-self: center;
             }
 
-            &__text {
-                position: relative;
-                max-width: 568px;
-                width: 100%;
-                flex: 1;
+            @include responsive('mobile-h') {
+                max-width: 100%;
+            }
 
-                @include responsive('desktop-s') {
-                    max-width: 100%;
-                }
+            &:before {
+                @include absolute();
+                content: "";
+                background-color: rgba(219, 133, 133, 0.20);
+                //z-index: 1;
+            }
+        }
 
-                .title {
-                    color: $secondary-color;
-                    font-family: $secondary-font;
-                    font-size: rv(42px, 60px);
-                    line-height: 1.25;
-                    font-weight: 600;
-                    //margin-bottom: rv(18px, 18px);
-                }
+        &__text {
+            position: relative;
+            width: 60%;
 
-                .uppertitle {
-                    color: $secondary-color;
-                    font-family: $secondary-font;
-                    font-size: rv(24px, 36px);
-                    line-height: 1.68;
-                    font-weight: 600;
-                }
+            @include responsive('desktop-s') {
+                max-width: 100%;
+            }
 
-                p {
-                    font-size: rv(20px, 38px);
-                    line-height: 1.26;
-                    font-weight: 600;
-                    margin-top: 40px;
-                    color: $primary-color;
-                }
+            .title {
+                color: $white;
+                font-family: $secondary-font;
+                font-size: rv(60px, 140px);
+                line-height: 1.25;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
+
+
+            p {
+                font-size: rv(20px, 38px);
+                line-height: 1.26;
+                font-weight: 600;
+                margin-top: 40px;
+                color: $primary-color;
             }
         }
     }
 
-    &::after {
+    video {
+        width: 100%;
+    }
+
+    /*  &::after {
         content: '';
         width: 100%;
         height: 44px;
@@ -96,5 +70,5 @@
         bottom: auto;
         top: 100%;
         left: 0;
-    }
+    } */
 }
