text-papper-block

--- a/wp-content/themes/gtoken/scss/main.scss
+++ b/wp-content/themes/gtoken/scss/main.scss
@@ -39,4 +39,5 @@ Text Domain: palermo
 'blocks/_facts',
 'blocks/_roadmap',
 'blocks/_text-image',
-'blocks/_partners';
+'blocks/_partners',
+'blocks/_text-papper';
