--- a/wp-content/themes/gtoken/scss/editor-blocks.scss
+++ b/wp-content/themes/gtoken/scss/editor-blocks.scss
@@ -1,13 +1,12 @@
 .editor-styles-wrapper {
     .acf-block-preview {
 
-        .author,
         p,
         span,
         ul,
         ol,
         a {
-            font-family: 'Ysabeau Office', sans-serif;
+            font-family: 'Bitter', serif;
         }
 
         .hero--home,
