--- a/wp-content/themes/gtoken/scss/main.scss
+++ b/wp-content/themes/gtoken/scss/main.scss
@@ -34,4 +34,5 @@ Text Domain: palermo
 // Blocks
 @import 'blocks/_wrapper',
 'blocks/_default-block',
-'blocks/_text-papper';
+'blocks/_text-papper',
+'blocks/_number-grid';
