--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -3,7 +3,11 @@
 Theme Name: Palermo
 Text Domain: palermo
 */
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Ysabeau+Office:wght@400;500;600;700&display=swap");
+/* 
+font-family: 'Bebas Neue', sans-serif;
+font-family: 'Bitter', serif;
+font-family: 'Courier Prime', monospace; */
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:ital@0;1&family=Courier+Prime:ital,wght@0,400;0,700;1,400&display=swap");
 .image-background {
 				position: absolute;
 				top: 0;
@@ -52,102 +56,27 @@ Aplica transformX(0px), transformY(0px) y opacity 1 para hacer aparecer el objec
 Se usa igual que fade, pero crea un loop para animar los elementos de forma ordenada
 */
 /* Text Block Custom Style */
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-Black.eot");
-				src: url("fonts/PlayfairDisplay-Black.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-Black.woff2") format("woff2"), url("fonts/PlayfairDisplay-Black.woff") format("woff");
-				font-weight: 900;
-				font-style: normal;
-				font-display: swap;
+/* @font-face {
+    font-family: 'Playfair Display';
+    src: url('fonts/PlayfairDisplay-Black.eot');
+    src: url('fonts/PlayfairDisplay-Black.eot?#iefix') format('embedded-opentype'),
+        url('fonts/PlayfairDisplay-Black.woff2') format('woff2'),
+        url('fonts/PlayfairDisplay-Black.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
 }
+
 @font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-BlackItalic.eot");
-				src: url("fonts/PlayfairDisplay-BlackItalic.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-BlackItalic.woff2") format("woff2"), url("fonts/PlayfairDisplay-BlackItalic.woff") format("woff");
-				font-weight: 900;
-				font-style: italic;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-Bold.eot");
-				src: url("fonts/PlayfairDisplay-Bold.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-Bold.woff2") format("woff2"), url("fonts/PlayfairDisplay-Bold.woff") format("woff");
-				font-weight: bold;
-				font-style: normal;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-BoldItalic.eot");
-				src: url("fonts/PlayfairDisplay-BoldItalic.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-BoldItalic.woff2") format("woff2"), url("fonts/PlayfairDisplay-BoldItalic.woff") format("woff");
-				font-weight: bold;
-				font-style: italic;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-ExtraBoldItalic.eot");
-				src: url("fonts/PlayfairDisplay-ExtraBoldItalic.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-ExtraBoldItalic.woff2") format("woff2"), url("fonts/PlayfairDisplay-ExtraBoldItalic.woff") format("woff");
-				font-weight: bold;
-				font-style: italic;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-ExtraBold.eot");
-				src: url("fonts/PlayfairDisplay-ExtraBold.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-ExtraBold.woff2") format("woff2"), url("fonts/PlayfairDisplay-ExtraBold.woff") format("woff");
-				font-weight: bold;
-				font-style: normal;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-Italic.eot");
-				src: url("fonts/PlayfairDisplay-Italic.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-Italic.woff2") format("woff2"), url("fonts/PlayfairDisplay-Italic.woff") format("woff");
-				font-weight: normal;
-				font-style: italic;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-Medium.eot");
-				src: url("fonts/PlayfairDisplay-Medium.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-Medium.woff2") format("woff2"), url("fonts/PlayfairDisplay-Medium.woff") format("woff");
-				font-weight: 500;
-				font-style: normal;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-MediumItalic.eot");
-				src: url("fonts/PlayfairDisplay-MediumItalic.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-MediumItalic.woff2") format("woff2"), url("fonts/PlayfairDisplay-MediumItalic.woff") format("woff");
-				font-weight: 500;
-				font-style: italic;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-Regular.eot");
-				src: url("fonts/PlayfairDisplay-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-Regular.woff2") format("woff2"), url("fonts/PlayfairDisplay-Regular.woff") format("woff");
-				font-weight: normal;
-				font-style: normal;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-SemiBold.eot");
-				src: url("fonts/PlayfairDisplay-SemiBold.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-SemiBold.woff2") format("woff2"), url("fonts/PlayfairDisplay-SemiBold.woff") format("woff");
-				font-weight: 600;
-				font-style: normal;
-				font-display: swap;
-}
-@font-face {
-				font-family: "Playfair Display";
-				src: url("fonts/PlayfairDisplay-SemiBoldItalic.eot");
-				src: url("fonts/PlayfairDisplay-SemiBoldItalic.eot?#iefix") format("embedded-opentype"), url("fonts/PlayfairDisplay-SemiBoldItalic.woff2") format("woff2"), url("fonts/PlayfairDisplay-SemiBoldItalic.woff") format("woff");
-				font-weight: 600;
-				font-style: italic;
-				font-display: swap;
-}
+    font-family: 'Playfair Display';
+    src: url('fonts/PlayfairDisplay-BlackItalic.eot');
+    src: url('fonts/PlayfairDisplay-BlackItalic.eot?#iefix') format('embedded-opentype'),
+        url('fonts/PlayfairDisplay-BlackItalic.woff2') format('woff2'),
+        url('fonts/PlayfairDisplay-BlackItalic.woff') format('woff');
+    font-weight: 900;
+    font-style: italic;
+    font-display: swap;
+} */
 html {
 				-webkit-box-sizing: border-box;
 				        box-sizing: border-box;
@@ -172,7 +101,7 @@ html {
 }
 
 body {
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 				font-size: clamp(16px, 13.6px + 0.004 * 100vw, 18px);
 				color: #34375A;
 				background: #ffffff;
@@ -211,7 +140,7 @@ input[type=search],
 input[type=submit],
 textarea,
 button {
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 				-webkit-appearance: none;
 				   -moz-appearance: none;
 				        appearance: none;
@@ -223,14 +152,14 @@ button {
 }
 
 select {
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 }
 
 h1,
 .h1,
 .h1 p {
 				font-size: 124px;
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 }
 @media only screen and (max-width: 1050px) {
 				h1,
@@ -251,7 +180,7 @@ h2,
 .h2,
 .h2 p {
 				font-size: 80px;
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 }
 @media only screen and (max-width: 1050px) {
 				h2,
@@ -272,7 +201,7 @@ h3,
 .h3,
 .h3 p {
 				font-size: 36px;
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 }
 @media only screen and (max-width: 1050px) {
 				h3,
@@ -293,7 +222,7 @@ h4,
 .h4,
 .h4 p {
 				font-size: 26px;
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 }
 @media only screen and (max-width: 1050px) {
 				h4,
@@ -314,7 +243,7 @@ h5,
 .h5,
 .h5 p {
 				font-size: 18px;
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 }
 @media only screen and (max-width: 1050px) {
 				h5,
@@ -335,7 +264,7 @@ h6,
 .h6,
 .h6 p {
 				font-size: 16px;
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 }
 @media only screen and (max-width: 1050px) {
 				h6,
@@ -510,7 +439,6 @@ strong * {
 .home .header .site-menu__first-level {
 				color: #ffffff;
 				cursor: pointer;
-				font-family: "Playfair Display", sans-serif;
 }
 @media only screen and (min-width: 1050px) {
 				.home .header .site-menu .site-menu__item.hover .site-menu__first-level {
@@ -1060,7 +988,7 @@ section .gform_wrapper select {
 				border: 1px solid #235FEE;
 				padding: 0 25px;
 				font-size: 16px;
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 				color: #34375A;
 				font-size: 19px;
 }
@@ -1205,7 +1133,6 @@ section .gform_wrapper .gform_footer .button {
 				border-radius: 36.55px;
 				background-color: transparent;
 				border: 1px solid #485783;
-				font-family: "Lato", sans-serif;
 }
 @media only screen and (max-width: 768px) {
 				.site .gform_wrapper .gform_footer .button,
@@ -1443,7 +1370,7 @@ section .gform_wrapper ul.gfield_radio li input[type=radio]:checked + label:afte
 				border: 1px solid #235FEE;
 				padding: 0 25px;
 				font-size: 16px;
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 				color: #34375A;
 				width: 100%;
 				margin-bottom: 8px;
@@ -1679,7 +1606,7 @@ select option {
 }
 .hero--home .hero__text {
 				position: relative;
-				width: 60%;
+				max-width: 50%;
 }
 @media only screen and (max-width: 1150px) {
 				.hero--home .hero__text {
@@ -1688,11 +1615,12 @@ select option {
 }
 .hero--home .hero__text .title {
 				color: #ffffff;
-				font-family: "Playfair Display", sans-serif;
-				font-size: clamp(60px, -27px + 0.145 * 100vw, 140px);
-				line-height: 1.25;
-				font-weight: 600;
+				font-family: "Bebas Neue", sans-serif;
+				font-size: clamp(60px, -49.2px + 0.182 * 100vw, 160px);
+				line-height: 1;
+				font-weight: 400;
 				text-transform: uppercase;
+				letter-spacing: 10px;
 }
 .hero--home .hero__text p {
 				font-size: clamp(20px, 0.2px + 0.033 * 100vw, 38px);
@@ -2569,20 +2497,24 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 								        transform: rotate(360deg);
 				}
 }
-.wrapper.is-style-grey-background {
-				background-color: #F9F9F9;
-}
-.wrapper.is-style-light-blue-background {
-				background-color: #EFF7FA;
-}
-.wrapper.is-style-normal {
-				background-color: #ffffff;
-}
-.wrapper--hero {
-				background-color: #F7F8FA;
+.wrapper {
+				/*   &.is-style-grey-background {
+				    background-color: $light-grey;
+				}
+
+				&.is-style-light-blue-background {
+				    background-color: $light-blue;
+				}
+
+				&.is-style-normal {
+				    background-color: $white;
+				} */
 }
 .wrapper--white {
 				background-color: #ffffff;
+}
+.wrapper--pink {
+				background-color: #FB3BA5;
 }
 .wrapper--grey {
 				background-color: #F9F9F9;
@@ -2611,7 +2543,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 .default_block h3,
 .default_block h4,
 .default_block h5 {
-				font-family: "Ysabeau Office", sans-serif;
+				font-family: "Bitter", serif;
 				font-weight: 600;
 				color: #34375A;
 				text-transform: none;
@@ -2752,7 +2684,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				-webkit-box-direction: normal;
 				    -ms-flex-direction: column;
 				        flex-direction: column;
-				gap: 20px;
+				gap: 40px;
 				-webkit-box-pack: center;
 				    -ms-flex-pack: center;
 				        justify-content: center;
@@ -2777,14 +2709,56 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				line-height: 1.2;
 				font-weight: 600;
 				text-transform: uppercase;
+				color: #231F20;
 }
 .text-papper .content__text .title span {
-				color: #000;
+				color: #FB3BA5;
 				font-style: italic;
 				text-transform: capitalize;
+				letter-spacing: 3px;
+}
+.text-papper .content__description {
+				max-width: 45%;
+}
+.text-papper .content__description p {
+				font-size: clamp(18px, 13.8px + 0.007 * 100vw, 22px);
+				color: #231F20;
+				font-weight: 400;
+				line-height: 1.6;
+}
+.text-papper .content__link {
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-pack: center;
+				    -ms-flex-pack: center;
+				        justify-content: center;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
 }
 .text-papper .content__link a {
-				font-size: clamp(18px, 13.8px + 0.007 * 100vw, 22px);
+				font-size: clamp(20px, 13.4px + 0.011 * 100vw, 26px);
 				text-decoration: none;
+				color: #231F20;
+}
+.text-papper .content__link a span {
+				color: #EFF7FA;
+				text-transform: capitalize;
+}
+.text-papper .content__link::before {
+				content: "";
+				background: url(images/icons/arrow-select.svg) no-repeat center/contain;
+				-webkit-transform: rotate(-90deg);
+				        transform: rotate(-90deg);
+				margin-right: 20px;
+				display: inline-block;
+				width: 20px;
+				height: 20px;
+}
+
+.number_grid {
+				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
+				padding-bottom: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
 }
 /*# sourceMappingURL=style.css.map */
