--- a/wp-content/themes/gtoken/scss/abstracts/_variables.scss
+++ b/wp-content/themes/gtoken/scss/abstracts/_variables.scss
@@ -1,29 +1,42 @@
 /// @type List
-$default-font: 'Ysabeau Office', sans-serif !default;
-$secondary-font: 'Playfair Display', sans-serif !default;
-$lato-font: 'Lato', sans-serif !default;
+$default-font: 'Bitter', serif !default;
+$secondary-font: 'Bebas Neue', sans-serif !default;
+$third-font: 'Courier Prime', monospace !default;
+
+/* 
+font-family: 'Bebas Neue', sans-serif;
+font-family: 'Bitter', serif;
+font-family: 'Courier Prime', monospace; */
+
 
 /// @type Color
 $primary-color: #34375A !default;
+$pink-color: #FB3BA5 !default;
+$light-blue-color: #3ACBED !default;
+$light-grey: #F9F9F9 !default;
+$dark-black: #231F20 !default;
+$black: #000 !default;
+$white: #ffffff !default;
+$grey: #DFE3EC !default;
+$bodyfont: #666F77 !default;
+
+
+
+
 $secondary-color: #54A8C7 !default;
 $tertiary-color: #485783 !default;
 $light-blue: #EFF7FA !default;
 $secondary-blue: #DFEDF3 !default;
 $border-input: #9AA9B8 !default;
-$white: #ffffff !default;
-$grey: #DFE3EC !default;
 $hero-grey: #F7F8FA !default;
-$light-grey: #F9F9F9 !default;
-$black: #000 !default;
 
 
 
 $third-color: #235FEE !default;
 $body: #EDF0F6;
-$bodyfont: #666F77;
-$input-grey: #F1F5F8;
+$input-grey: #F1F5F8; //delete junto  a forms.scss
 
-$form-error: #ED0000;
+$form-error: #ED0000; //delete junto  a forms.scss
 
 /// @type Length
 $site-widths: (
